Remove rounded corners

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,10 @@ h1, h2 {
     color: #184f63; /* Dark blue */
 }
 
+.sharp-corners, .sharp-corners * {
+    border-radius: 0;
+}
+
 #portfolio .card-title {
    color: #1f7798; /* Mid blue */
    font-size: 1.2rem; 
