Add custom button CSS styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,18 @@ h1, h2 {
     min-height: 120px;
 }
 
+/* Buttons */
+
+.custom-button {
+    background-color: #1f7798;
+    border: #1f7798;
+}
+
+.custom-button:hover {
+    background-color: #1d6d8a;
+    border: #1d6d8a;
+}
+
 /* Contact section */
 
 #contact {
